--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
       { path: '/index', name: 'My Boats', component: () => loadModule('/pages/index.vue', options) },
       { path: '/myboats', name: 'My Boats', component: () => loadModule('/pages/myboats.vue', options) },
       { path: '/maneuvers', name: 'The Maneuvers', component: () => loadModule('/pages/maneuvers.vue', options) },
+      { path: '/account', name: 'Account', component: () => loadModule('/pages/account.vue', options) },
       { path: '/', name: 'My Boats', component: () => loadModule('/pages/index.vue', options) }
     ],
   })
